--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,8 +45,8 @@ nav{
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3); /* Enhanced shadow on hover */
 }
 
-.nav-container{
-    padding: 0 5%;
-
+.profile-photo-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
